modification adaptive section caculator

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 Калькулятор доставки
             </h1>
             <p class="calculator__form-text">
-                Посчитайте, сколько будет стоить перевозка<br/>
+                Посчитайте, сколько будет стоить перевозка
                 покупки из зарубежа
             </p>
             
