rework adaptive section .header

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 </div>
             </div>
         </div>
+        <div class="header__mobil-phon">
+            +7 (800) 123 45-67
+        </div>
         <div class="header__menu">
             <ul class="header__menu-list">
                 <li class="header__menu-item">
@@ -51,15 +54,17 @@
         <!--Появляется c 1535px и ниже-->
         <ul class="header__infotext ">
             <li class="header__infotext-item">
-                Доставляем товары <br/>
-                из заграницы в Россию
+                Доставляем товары
+                из заграницы в Россию
             </li> 
             <li class="header__infotext-item">
-                Стоимость от 550 рублей <br/>
-                за заказ
+                Стоимость от 550 рублей
+                за заказ
             </li>
             <li class="header__infotext-item">
-                1 $ = 93 ₽ | 1 € = 99 ₽ | 1 ¥ = 13 ₽
+                <span>1 $ = 93 ₽</span> | 
+                <span>1 € = 99 ₽</span> | 
+                <span>1 ¥ = 13 ₽</span>
             </li>
         </ul>
     </header>
@@ -67,7 +72,7 @@
         <div class="calculator__banner">
             <div class="calculator__banner-wrap">
                 <h1 class="calculator__banner-title">
-                    Без проблемная доставка купленных вещей 
+                    Без проблемная доставка купленных вещей 
                     из США, Европы и Азии в Россию
                 </h1>
                 <p class="calculator__banner-text" >
