modification section Feedback

--- a/index.html
+++ b/index.html
@@ -224,40 +224,52 @@
     </section>
     <section class="feedback contain">
         <h1 class="feedback__title">Отзывы</h1>
-        <div class="feedback__carousel">
+        <div class="feedback__carousel carousel-text-items">
 
-            <button class="feedback__btn-previous">
+            <button class="feedback__btn-previous carousel-text-items__btn-previous">
                 <img src="./image/btn-previous.svg" alt="">
             </button>
-            <button class="feedback__btn-next">
+            <button class="feedback__btn-next carousel-text-items__btn-next">
                 <img src="./image/btn-next.svg" alt="">
             </button>
 
-            <div class="feedback__carousel-contain">
-                <div class="feedback__carousel-wrap">
-                        <div class="feedback__carousel-item">
-                        <p>1Я заказала последний iPhone из США через ваш сервис, и доставка прошла быстро и без каких‑либо проблем. Гарантии качества и надёжная упаковка сделали мой опыт покупки невероятно позитивным</p>
-                        <span>Анна</span>
+            <div class="carousel-text-items__contain">
+                <div class="carousel-text-items__wrap">
+                    <div class="carousel-text-items__item">
+                        <div class="carousel-text-items__item-wrap">
+                            <p>1Я заказала последний iPhone из США через ваш сервис, и доставка прошла быстро и без каких‑либо проблем. Гарантии качества и надёжная упаковка сделали мой опыт покупки невероятно позитивным</p>
+                            <span>Анна</span>
+                        </div>
                     </div>
-                    <div class="feedback__carousel-item">
-                        <p>2Я уже несколько лет заказываю дизайнерскую одежду из Франции через ваш сервис, и он никогда меня не подводил. Важно иметь надёжную компанию, которая позаботится о вашем заказе и предоставит все необходимые документы для ввоза в Россию</p>
-                        <span>Алексей</span>
+                    <div class="carousel-text-items__item">
+                        <div class="carousel-text-items__item-wrap">
+                            <p>2Я уже несколько лет заказываю дизайнерскую одежду из Франции через ваш сервис, и он никогда меня не подводил. Важно иметь надёжную компанию, которая позаботится о вашем заказе и предоставит все необходимые документы для ввоза в Россию</p>
+                            <span>Алексей</span>
+                        </div>
                     </div>
-                    <div class="feedback__carousel-item">
-                        <p>3Я уже несколько лет заказываю дизайнерскую одежду из Франции через ваш сервис, и он никогда меня не подводил. Важно иметь надежную компанию, которая позаботится о вашем заказе и предоставит все необходимые документы для ввоза в Россию</p>
-                        <span>Ольга</span>
+                    <div class="carousel-text-items__item">
+                        <div class="carousel-text-items__item-wrap">
+                            <p>3Я уже несколько лет заказываю дизайнерскую одежду из Франции через ваш сервис, и он никогда меня не подводил. Важно иметь надежную компанию, которая позаботится о вашем заказе и предоставит все необходимые документы для ввоза в Россию</p>
+                            <span>Ольга</span>
+                        </div>
                     </div>
-                    <div class="feedback__carousel-item">
-                        <p>4Заказал шикарные часы из Швейцарии, и доставка была невероятно быстрой. Ваш сервис делает интернет-шоппинг более доступным и удобным</p>
-                        <span>Игорь</span>
+                    <div class="carousel-text-items__item">
+                        <div class="carousel-text-items__item-wrap">
+                            <p>4Заказал шикарные часы из Швейцарии, и доставка была невероятно быстрой. Ваш сервис делает интернет-шоппинг более доступным и удобным</p>
+                            <span>Игорь</span>
+                        </div>
                     </div>
-                    <div class="feedback__carousel-item">
-                        <p>5Ваш сервис действительно изменил мой способ покупок. Я больше не переживаю о таможенных вопросах и документах - все у вас в порядке. Спасибо за ваше качество и надежность</p>
-                        <span>Екатерина</span>
+                    <div class="carousel-text-items__item">
+                        <div class="carousel-text-items__item-wrap">
+                            <p>5Ваш сервис действительно изменил мой способ покупок. Я больше не переживаю о таможенных вопросах и документах - все у вас в порядке. Спасибо за ваше качество и надежность</p>
+                            <span>Екатерина</span>
+                        </div>
                     </div>
-                    <div class="feedback__carousel-item">
-                        <p>6Я заказал редкий антикварный предмет из Японии через ваш сервис, и остался впечатлен. Все пришло в отличном состоянии, и ваша гарантия качества действительно работает. Спасибо за ваше профессиональное обслуживание</p>
-                        <span>Дмитрий</span>
+                    <div class="carousel-text-items__item">
+                        <div class="carousel-text-items__item-wrap">
+                            <p>6Я заказал редкий антикварный предмет из Японии через ваш сервис, и остался впечатлен. Все пришло в отличном состоянии, и ваша гарантия качества действительно работает. Спасибо за ваше профессиональное обслуживание</p>
+                            <span>Дмитрий</span>
+                        </div>
                     </div>
                 </div>
             </div>
