--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header contain">
         <div class="header__info">
-            <a class="logo header__logo" href="/">
+            <a class="logo header__logo" href="#">
                 <img  src="./image/Logo.svg" alt="From Board Delivery"/>
             </a>
             <div class="header__wrap">
@@ -37,16 +37,16 @@
         <div class="header__menu">
             <ul class="header__menu-list">
                 <li class="header__menu-item">
-                    <a href="/">Калькулятор</a>
+                    <a href="#calculator">Калькулятор</a>
                 </li>
                 <li class="header__menu-item">
-                    <a href="/">О нас</a>
+                    <a href="#advantages">О нас</a>
                 </li>
                 <li class="header__menu-item">
-                    <a href="/">Гарантии</a>
+                    <a href="#documents">Гарантии</a>
                 </li>
                 <li class="header__menu-item">
-                    <a href="/">Отзывы</a>
+                    <a href="#feedback">Отзывы</a>
                 </li>
             </ul>
             <button class="button header__menu-btn">Оставить заявку</button>
@@ -68,7 +68,7 @@
             </li>
         </ul>
     </header>
-    <section class="calculator contain">
+    <section class="calculator contain" id="calculator">
         <div class="calculator__banner">
             <div class="calculator__banner-wrap">
                 <h1 class="calculator__banner-title">
@@ -95,7 +95,6 @@
             <form id="form"  method="post" autocomplete="off">
                 <input name="name" class="input-text" type="text" placeholder="Имя"/>
                                                         
-
                 <fieldset>
                     <input name="email" class="input-text" type="text" placeholder="Почта"/>
                     <input name="area" class="input-text" type="text" placeholder="Общая площадь, м²"/>
@@ -114,7 +113,7 @@
             </form>
         </div>
     </section>
-    <section class="advantages contain">
+    <section class="advantages contain" id="advantages">
         <h1 class="advantages__title">Наши преимущества</h1>
         <div class="advantages__items">
 
@@ -182,7 +181,7 @@
 
         </div>
     </section>
-    <section class="documents contain">
+    <section class="documents contain" id="documents">
 
         <h1 class="documents__title">Гарантии качества</h1>
         <p class="documents__text">
@@ -222,7 +221,7 @@
 
         <button class="documents__btn button">Показать больше документов</button>
     </section>
-    <section class="feedback contain">
+    <section class="feedback contain" id="feedback">
         <h1 class="feedback__title">Отзывы</h1>
         <div class="feedback__carousel carousel-text-items">
 
@@ -302,16 +301,16 @@
         <nav class="footer__menu">
             <ul class="footer__menu-list">
                 <li>
-                    <a href="">Калькулятор</a>
+                    <a href="#calculator">Калькулятор</a>
                 </li>
                 <li>
-                    <a href="">О нас</a>
+                    <a href="#advantages">О нас</a>
                 </li>
                 <li>
-                    <a href="">Гарантии</a>
+                    <a href="#documents">Гарантии</a>
                 </li>
                 <li>
-                    <a href="">Отзывы</a>
+                    <a href="#feedback">Отзывы</a>
                 </li>
             </ul>
         </nav>
