--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>FromBoard Delivery</title>
 </head>
 <body>
+    <div class="massage-about-sending">
+        <div class="contain">
+            <div class="wrap">
+                <img src="./image/send.svg">
+                <h1>Сообщение оправлено!</h1>               
+            </div>
+        </div>
+        
+    </div>
+
+
     <header class="header contain">
         <div class="header__info">
             <a class="logo header__logo" href="#">
